Mise en forme de la doc incluse

--- a/doc/scss/components/_code.scss
+++ b/doc/scss/components/_code.scss
@@ -5,45 +5,42 @@
 
 qc-code {
   display: block;
+  max-inline-size: token-value(max-content-width);
 }
 
-.clipboard {
-  position: relative;
-  float: right;
-  button {
-    position: absolute;
-    right: token-value(spacer sm);
-    top: token-value(spacer sm);
-    padding: token-value(spacer xs) token-value(spacer sm) ;
-    color : white;
-    background-color: token-value(color blue piv);
-    border: 1px solid;
-  }
-}
-code, .qc-code {
-  font-family: token-value(font, family, code);
-}
 pre {
   margin: 0;
   padding: 0;
-  //white-space: pre-wrap;
+  white-space: pre-wrap;
   overflow: scroll;
-}
 
-button {
-  white-space: nowrap;
-  transition: none!important;
-  .copy {display: inline;}
-  .copied {display: none;}
-  &.copied {
-    background-color: transparent!important;
-    border-color: transparent!important;;
-    box-shadow: none!important;
-    color: token-value(color blue piv)!important;
-    .copy {display: none;}
-    .copied {
-      display: inline;
-      //animation: fadeout .5s;
+  code, .qc-code {
+    font-family: token-value(font, family, code);
+
+    button {
+      float: right;
+      //position: absolute;
+      right: token-value(spacer xs);
+      top: token-value(spacer xs);
+      padding: token-value(spacer xs) token-value(spacer sm) ;
+      color : white;
+      background-color: token-value(color blue piv);
+      border: 1px solid;
+      white-space: nowrap;
+      transition: none!important;
+      .copy {display: inline;}
+      .copied {display: none;}
+      &.copied {
+        background-color: transparent!important;
+        border-color: transparent!important;;
+        box-shadow: none!important;
+        color: token-value(color blue piv)!important;
+        .copy {display: none;}
+        .copied {
+          display: inline;
+          //animation: fadeout .5s;
+        }
+      }
     }
   }
 }
