--- a/public/css/qc-catalog-sdg.css
+++ b/public/css/qc-catalog-sdg.css
@@ -52,55 +52,55 @@ Always use this function for rem values
   height: 40px;
 }
 .qc-icon.qc-external-link {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#external-link);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#external-link);
 }
 .qc-icon.qc-warning {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#warning);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#warning);
 }
 .qc-icon.qc-arrow-up-white {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#arrow-up-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#arrow-up-white);
 }
 .qc-icon.qc-clipboard {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#clipboard);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#clipboard);
 }
 .qc-icon.qc-error {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#error);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#error);
 }
 .qc-icon.qc-error-white {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#error-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#error-white);
 }
 .qc-icon.qc-information {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#information);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#information);
 }
 .qc-icon.qc-information-white {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#information-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#information-white);
 }
 .qc-icon.qc-minus {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#minus);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#minus);
 }
 .qc-icon.qc-plus {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#plus);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#plus);
 }
 .qc-icon.qc-question-mark {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#question-mark);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#question-mark);
 }
 .qc-icon.qc-success {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#success);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#success);
 }
 .qc-icon.qc-success-white {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#success-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#success-white);
 }
 .qc-icon.qc-xclose-white {
   width: 16px;
   height: 16px;
   min-width: 16px;
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#xclose-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#xclose-white);
 }
 .qc-icon.qc-xclose-blue {
   width: 16px;
   height: 16px;
   min-width: 16px;
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#xclose-blue);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#xclose-blue);
 }
 .qc-icon.qc-chevron-blue, .qc-icon.qc-chevron-white {
   width: 16px;
@@ -108,85 +108,78 @@ Always use this function for rem values
   height: 10px;
 }
 .qc-icon.qc-chevron-blue {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#chevron-blue);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#chevron-blue);
 }
 .qc-icon.qc-chevron-white {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#chevron-white);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#chevron-white);
 }
 .qc-icon.qc-facebook {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#facebook);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#facebook);
 }
 .qc-icon.qc-linkedin {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#linkedin);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#linkedin);
   height: 30px;
 }
 .qc-icon.qc-twitter {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#twitter);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#twitter);
 }
 .qc-icon.qc-youtube {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#youtube);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#youtube);
 }
 .qc-icon.qc-warning-alert-icon {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#warning);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#warning);
 }
 .qc-icon.qc-general-alert-icon {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#information);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#information);
 }
 .qc-icon.qc-search {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#loupe-piv-droite);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#loupe-piv-droite);
 }
 .qc-icon.qc-search-submit {
-  background-image: url(../img/qc-sprite.svg?v=1.1.2#loupe-piv-fonce);
+  background-image: url(../img/qc-sprite.svg?v=1.2.0#loupe-piv-fonce);
 }
 
 qc-code {
   display: block;
-}
-
-.clipboard {
-  position: relative;
-  float: right;
-}
-.clipboard button {
-  position: absolute;
-  right: var(--qc-spacer-sm);
-  top: var(--qc-spacer-sm);
-  padding: var(--qc-spacer-xs) var(--qc-spacer-sm);
-  color: white;
-  background-color: var(--qc-color-blue-piv);
-  border: 1px solid;
-}
-
-code, .qc-code {
-  font-family: var(--qc-font-family-code);
+  max-inline-size: var(--qc-max-content-width);
 }
 
 pre {
   margin: 0;
   padding: 0;
+  white-space: pre-wrap;
   overflow: scroll;
 }
-
-button {
+pre code, pre .qc-code {
+  font-family: var(--qc-font-family-code);
+}
+pre code button, pre .qc-code button {
+  float: right;
+  right: var(--qc-spacer-xs);
+  top: var(--qc-spacer-xs);
+  padding: var(--qc-spacer-xs) var(--qc-spacer-sm);
+  color: white;
+  background-color: var(--qc-color-blue-piv);
+  border: 1px solid;
   white-space: nowrap;
   transition: none !important;
 }
-button .copy {
+pre code button .copy, pre .qc-code button .copy {
   display: inline;
 }
-button .copied {
+pre code button .copied, pre .qc-code button .copied {
   display: none;
 }
-button.copied {
+pre code button.copied, pre .qc-code button.copied {
   background-color: transparent !important;
   border-color: transparent !important;
   box-shadow: none !important;
   color: var(--qc-color-blue-piv) !important;
 }
-button.copied .copy {
+pre code button.copied .copy, pre .qc-code button.copied .copy {
   display: none;
 }
-button.copied .copied {
+pre code button.copied .copied, pre .qc-code button.copied .copied {
   display: inline;
 }
 
@@ -297,6 +290,10 @@ table.qc-table.qc-striped tbody tr:nth-of-type(even) {
 }
 table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
   border-bottom: 1px solid var(--qc-color-grey-light);
+}
+
+main {
+  padding-bottom: var(--qc-spacer-lg);
 }
 
 .color-details {
@@ -454,6 +451,18 @@ table.component-attributes-description td:first-child {
   width: 1px;
   height: 1px;
   clip: rect(0 0 0 0);
+}
+
+hr {
+  margin: var(--qc-spacer-lg) 0;
+  height: 1px;
+  border: 0;
+  color: var(--qc-color-grey-light);
+  background-color: var(--qc-color-grey-light);
+}
+
+qc-piv-footer + qc-code {
+  margin-top: 0;
 }
 
 /*!
