--- a/src/scss/base/_figure.scss
+++ b/src/scss/base/_figure.scss
@@ -1,15 +1,9 @@
 @use "modules/tokens" as *;
 @use "modules/utils" as *;
 
-.qc-gallery {
-  overflow: hidden;
-  margin-top: rem($base-spacer);
-}
-
 figure {
-  display: table;
-  margin: 0 0 rem(4 * $base-spacer) 0;
-
+  display: inline-block;
+  flex-direction: column;
   img {
     max-width: 100%;
     height: auto;
@@ -17,8 +11,6 @@ figure {
 }
 figcaption {
   @include content-font(sm);
-  display: table-caption;
-  caption-side: bottom;
   background-color: token-value(color, grey, pale);
   padding: rem($base-spacer);
   margin-top: rem($base-spacer);
@@ -28,6 +20,6 @@ figcaption {
       margin-bottom: 0;
     }
   }
-  margin-bottom: token-value(spacer md);
+  //margin-bottom: token-value(spacer md);
 }
 
