--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -3,6 +3,7 @@
 @use "../modules/grid" as *;
 
 .qc-general-alert {
+  max-inline-size: token-value(max-content-width);
   padding: token-value(spacer, md) token-value(spacer, sm);
 
   @include media-mobile() {
