--- a/src/doc/scss/_tables.scss
+++ b/src/doc/scss/_tables.scss
@@ -1,5 +1,5 @@
-@use "../../src/scss/modules/utils" as *;
-@use "../../src/scss/modules/tokens" as *;
+@use "modules/utils" as *;
+@use "modules/tokens" as *;
 
 table.qc-table {
   margin-bottom: 0;
