--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -125,6 +125,13 @@ $xl-tokens: (
             3: 16px,
             4: 24px,
         ),
+        offset: (
+            0: 0,
+            1: 1px,
+            2: 2px,
+            3: 4px,
+            4: 6px,
+        ),
     ),
     spacer: (
       // base scale
