--- a/src/sdg/scss/components/_pivFooter.scss
+++ b/src/sdg/scss/components/_pivFooter.scss
@@ -10,6 +10,9 @@ qc-piv-footer {
 
   a {
     text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   ul {
@@ -25,6 +28,10 @@ qc-piv-footer {
       padding: 0 token-value(spacer sm) token-value(spacer xs);
       margin: 0;
       text-align: center;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -33,6 +40,9 @@ qc-piv-footer {
 .qc-piv-footer {
   a {
     text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .qc-container {
