--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -97,7 +97,7 @@ main {
   align-items: center;
 
   &.qc-shading-0 {
-    border: 1px solid token-value(color,blue,pale)
+    border: 1px solid token-value(color, grey, light)
   }
 }
 
