--- a/src/sdg/scss/components/_pivHeader.scss
+++ b/src/sdg/scss/components/_pivHeader.scss
@@ -208,7 +208,7 @@ qc-piv-header {
     .piv-top {
       .logo img {
         min-width: rem(175);
-        height: rem(66);
+        width: rem(175);
       }
 
       .title {
