--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -465,6 +465,16 @@ qc-piv-footer + qc-code {
   margin-top: 0;
 }
 
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 1em;
+}
+
+code.hljs {
+  padding: 3px 5px;
+}
+
 /*!
   Theme: Default
   Description: Original highlight.js style
@@ -473,6 +483,12 @@ qc-piv-footer + qc-code {
   Website: https://highlightjs.org/
   License: see project LICENSE
   Touched: 2021
+*/
+/*
+This is left on purpose making default.css the single file that can be lifted
+as-is from the repository directly without the need for a build step
+
+Typically this "required" baseline CSS is added by `makestuff.js` during build.
 */
 pre code.hljs {
   display: block;
@@ -484,48 +500,83 @@ code.hljs {
   padding: 3px 5px;
 }
 
+/* end baseline CSS */
 .hljs {
-  background: #f3f3f3;
+  background: #F3F3F3;
   color: #444;
 }
 
+/* Base color: saturation 0; */
+.hljs-subst {
+  /* default */
+}
+
+/* purposely ignored */
 .hljs-comment {
   color: #697070;
 }
 
-.hljs-punctuation, .hljs-tag {
+.hljs-tag,
+.hljs-punctuation {
   color: rgba(68, 68, 68, 0.6666666667);
 }
 
-.hljs-tag .hljs-attr, .hljs-tag .hljs-name {
+.hljs-tag .hljs-name,
+.hljs-tag .hljs-attr {
   color: #444;
 }
 
-.hljs-attribute, .hljs-doctag, .hljs-keyword, .hljs-meta .hljs-keyword, .hljs-name, .hljs-selector-tag {
-  font-weight: 700;
+.hljs-keyword,
+.hljs-attribute,
+.hljs-selector-tag,
+.hljs-meta .hljs-keyword,
+.hljs-doctag,
+.hljs-name {
+  font-weight: bold;
 }
 
-.hljs-deletion, .hljs-number, .hljs-quote, .hljs-selector-class, .hljs-selector-id, .hljs-string, .hljs-template-tag, .hljs-type {
-  color: #800;
+/* User color: hue: 0 */
+.hljs-type,
+.hljs-string,
+.hljs-number,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-quote,
+.hljs-template-tag,
+.hljs-deletion {
+  color: #880000;
 }
 
-.hljs-section, .hljs-title {
-  color: #800;
-  font-weight: 700;
+.hljs-title,
+.hljs-section {
+  color: #880000;
+  font-weight: bold;
 }
 
-.hljs-link, .hljs-operator, .hljs-regexp, .hljs-selector-attr, .hljs-selector-pseudo, .hljs-symbol, .hljs-template-variable, .hljs-variable {
+.hljs-regexp,
+.hljs-symbol,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-link,
+.hljs-selector-attr,
+.hljs-operator,
+.hljs-selector-pseudo {
   color: #ab5656;
 }
 
+/* Language color: hue: 90; */
 .hljs-literal {
   color: #695;
 }
 
-.hljs-addition, .hljs-built_in, .hljs-bullet, .hljs-code {
+.hljs-built_in,
+.hljs-bullet,
+.hljs-code,
+.hljs-addition {
   color: #397300;
 }
 
+/* Meta color: hue: 200 */
 .hljs-meta {
   color: #1f7199;
 }
@@ -534,10 +585,11 @@ code.hljs {
   color: #38a;
 }
 
+/* Misc effects */
 .hljs-emphasis {
   font-style: italic;
 }
 
 .hljs-strong {
-  font-weight: 700;
+  font-weight: bold;
 }
