Squelette des liens blocs

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1324,3 +1324,15 @@ qc-alert [slot] a, qc-alert:not([slot=content]) a {
   white-space: nowrap;
   border: 0;
 }
+
+/**
+classe à appliquer sur une ancre pour créer un lien bloc
+<a class="qc-block-link">
+ */
+/**
+classe à appliquer sur une liste pour créer une liste de liens blocs
+<ul class="qc-blocs-links-list">
+  <li><a href="…">…</a></li>
+  …
+</ul>
+ */
