Ajout du composant séparateur.

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1324,3 +1324,9 @@ qc-alert [slot] a, qc-alert:not([slot=content]) a {
   white-space: nowrap;
   border: 0;
 }
+
+hr {
+  margin: var(--qc-spacer-lg) 0;
+  border: 0;
+  border-bottom: 1px solid var(--qc-color-grey-light);
+}
