--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -13,3 +13,4 @@
 @use "./components/pivFooter" as *;
 @use "./components/alert" as *;
 @use "./components/toTop" as *;
+@use "./components/separator" as *;
