--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1325,6 +1325,21 @@ qc-alert [slot] a, qc-alert:not([slot=content]) a {
   border: 0;
 }
 
+.separator {
+  padding: var(--qc-spacer-lg) 0;
+  border-top: 1px solid var(--qc-color-grey-light);
+  border-bottom: 1px solid var(--qc-color-grey-light);
+  text-align: justify;
+}
+
+hr {
+  margin: var(--qc-spacer-lg) 0;
+  height: 1px;
+  border: 0;
+  color: var(--qc-color-grey-light);
+  background-color: var(--qc-color-grey-light);
+}
+
 .qc-container,
 .qc-container-fluid,
 .qc-container-xl,
