--- a/src/sdg/scss/components/_separator.scss
+++ b/src/sdg/scss/components/_separator.scss
@@ -1,7 +1,14 @@
 @use "../modules/tokens" as *;
 @use "../modules/utils" as *;
 
-.separator,hr {
+.separator {
+  padding: token-value(spacer lg) 0;
+  border-top: 1px solid token-value(color grey light);
+  border-bottom: 1px solid token-value(color grey light);
+  text-align: justify;
+}
+
+hr {
   margin: token-value(spacer lg) 0;
   height: 1px;
   border: 0;
