--- a/src/sdg/scss/base/_grid.scss
+++ b/src/sdg/scss/base/_grid.scss
@@ -1,5 +1,5 @@
 @use "modules/grid" as *;
-@import "bootstrap-rewrite/grid";
+@import "vendor/bootstrap-rewrite/grid";
 
 // Décommenter ces lignes pour ajouter les classes utilitaires bootstrap précédées de « qc- »,
 // selon le même principe que pour la grille.
